--- a/src/components/workload/workload.css
+++ b/src/components/workload/workload.css
@@ -1,41 +1,24 @@
 .workload {
-  margin-top: 10px;
-}
-
-.workload th {
-  padding: 0.25rem 0.5rem;
-  text-align: center;
-}
-
-.workload th:first-child {
-  text-align: right;
-}
-
-.workload__cell {
-  padding: 0 0.5rem;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  text-align: center;
-}
-
-.workload__cell--ok {
-  background-color: #3adb76;
-}
-
-.workload__cell--warning {
-  background-color: #ffae00;
-}
-
-.workload__cell--full {
-  background-color: #cc4b37;
-}
-
-.workload__cell--alert {
-  background-color: #cc4b37;
-  color: #fff;
-  font-weight: bold;
-}
-
-.workload__cell--name {
-  text-align: left;
-}
+  margin-top: 10px; }
+  .workload th {
+    padding: 0.25rem 0.5rem;
+    text-align: center; }
+    .workload th:first-child {
+      text-align: right; }
+  .workload__cell {
+    padding: 0 0.5rem;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    text-align: center; }
+    .workload__cell--ok {
+      background-color: #3adb76; }
+    .workload__cell--warning {
+      background-color: #ffae00; }
+    .workload__cell--full {
+      background-color: #cc4b37; }
+    .workload__cell--alert {
+      background-color: #cc4b37;
+      color: #fff;
+      font-weight: bold; }
+    .workload__cell--name {
+      text-align: left; }
