removed demo prop

--- a/src/components/descriptionList/descriptionList.scss
+++ b/src/components/descriptionList/descriptionList.scss
@@ -1,8 +1,7 @@
 .descriptionList {
-  color:lime;
-
   &__title {
     margin-top: 1rem;
+    margin-bottom: 0;
     font-weight: bold;
 
     &:first-child {
