--- a/src/components/projects/react-tabs.scss
+++ b/src/components/projects/react-tabs.scss
@@ -1,36 +1,36 @@
 .react-tabs {
   margin-top: 20px;
   border: 1px solid #e6e6e6;
-}
 
-.react-tabs__tab-list {
-  border-bottom: 1px solid #e6e6e6;
-  margin: 0;
-  padding: 0;
-}
+  &__tab-list {
+    border-bottom: 1px solid #e6e6e6;
+    margin: 0;
+    padding: 0;
+  }
 
-.react-tabs__tab {
-  display: inline-block;
-  position: relative;
-  list-style: none;
-  padding: 0.25em 1em;
-  cursor: pointer;
-}
+  &__tab {
+    display: inline-block;
+    position: relative;
+    list-style: none;
+    padding: 0.25em 1em;
+    cursor: pointer;
+  }
 
-.react-tabs__tab--selected {
-  color: #1779ba;
-  background-color: #e6e6e6;
-}
+  &__tab--selected {
+    color: #1779ba;
+    background-color: #e6e6e6;
+  }
 
-.react-tabs__tab:focus {
-  outline: none;
-}
+  &__tab:focus {
+    outline: none;
+  }
 
-.react-tabs__tab-panel {
-  display: none;
-}
+  &__tab-panel {
+    display: none;
+  }
 
-.react-tabs__tab-panel--selected {
-  display: block;
-  padding: 15px;
+  &__tab-panel--selected {
+    display: block;
+    padding: 15px;
+  }
 }
