--- a/src/components/workload/workload.scss
+++ b/src/components/workload/workload.scss
@@ -34,6 +34,10 @@
       font-weight: bold;
     }
 
+    &--notAvailable {
+      background-color: #cacaca;
+    }
+
     &--name {
       text-align: left;
     }
