change to theme colors

--- a/src/components/loadingSpinner/loadingSpinner.scss
+++ b/src/components/loadingSpinner/loadingSpinner.scss
@@ -27,19 +27,19 @@
 
 @keyframes colors {
     0% {
-        stroke: #4285F4;
+        stroke: #1779ba;
     }
     25% {
-        stroke: #DE3E35;
+        stroke: #cc4b37;
     }
     50% {
-        stroke: #F7C223;
+        stroke: #ffae00;
     }
     75% {
-        stroke: #1B9A59;
+        stroke: #3adb76;
     }
     100% {
-        stroke: #4285F4;
+        stroke: #1779ba;
     }
 }
 
