--- a/src/components/loadingSpinner/loadingSpinner.scss
+++ b/src/components/loadingSpinner/loadingSpinner.scss
@@ -1,8 +1,8 @@
 .loadingSpinner {
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 100px;
 
     &__spinner {
         animation: rotator 1.4s linear infinite;
