--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,27 @@
 }
 
 .content {
-  margin-top: 60px;
+  position: relative;
+  top: 60px;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  position: relative;
+  min-height: 100%;
+  padding-bottom: 140px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding: 10px 0;
+  border-top: 1px solid #1779ba;
+  font-size: 0.75rem;
 }
