--- a/src/components/host/hostForm.scss
+++ b/src/components/host/hostForm.scss
@@ -1,6 +1,7 @@
 .hostForm {
   max-width: 600px;
-  margin: 30px auto 0;
+  margin: 0 auto;
+  padding-top: 30px;
 
   &__error {
     color: #cc4b37;
